# gago-ui

./: CMakeLists.txt  README.md  create_module.py
cmake/Modules/: FindLibGago.cmake  GagoUIConfig.cmake  gago-ui-main-module-config.cmake
src/: CMakeLists.txt  config.json  imodule.h  main.cpp  module_manager.cpp  module_manager.h  resources.qrc
src/common/: CMakeLists.txt  configuration.cpp  configuration.h  video_player.cpp  video_player.h
src/config/: configuration.cpp  configuration.h
src/modules/: CMakeLists.txt
src/modules/calibration/: CMakeLists.txt  calib_pattern_configurator_factory.cpp  calib_pattern_configurator_factory.h  calibration_configurator.cpp  calibration_configurator.h  calibration_estimates.h  calibration_module.cpp  calibration_module.h  calibration_pattern_type.cpp  calibration_pattern_type.h  calibration_settings.h  calibrator_configurator_factory.cpp  calibrator_configurator_factory.h  calibrator_type.cpp  calibrator_type.h  checkerboard_configurator.cpp  checkerboard_configurator.h  consts.cpp  consts.h  estimation_state.cpp  estimation_state.h  export.cpp  export.h  icalibrator.cpp  icalibrator.h  intrinsic_parameters.h  mle_calibrator_configurator.cpp  mle_calibrator_configurator.h  test.cpp
src/modules/calibration/calibrator/: batch_calibration_result.h  calibrator_factory.cpp  calibrator_factory.h  icalibrator.h  image_set_view.cpp  image_set_view.h  mle_calibration_window.ui  mle_calibrator.cpp  mle_calibrator.h  mle_configuration_settings.h  open_cv_mle.cpp  open_cv_mle.h  rectified_image_view_window.cpp  rectified_image_view_window.h  rectified_image_view_window.ui  thumb_show_item_model.cpp  thumb_show_item_model.h
src/modules/calibration/pattern/: calibration_pattern_factory.cpp  calibration_pattern_factory.h  checkerboard_pattern.cpp  checkerboard_pattern.h  ipattern.h  ipattern_extractor.h  pattern.h  pattern_estimation_parameters.h
src/modules/calibration/settings/: calibration_configurator.cpp  calibration_configurator.h  calibration_settings.cpp  calibration_settings.h  checkerboard_pattern_configurator.cpp  checkerboard_pattern_configurator.h  checkerboard_pattern_settings.cpp  checkerboard_pattern_settings.h  dist_model.h  mle_calibrator_configurator.cpp  mle_calibrator_configurator.h  mle_calibrator_settings.cpp  mle_calibrator_settings.h
src/modules/camera/: CMakeLists.txt  camera_configurator.cpp  camera_configurator.h  camera_module.cpp  camera_module.h  camera_settings_q_model.cpp  camera_settings_q_model.h  export.cpp  export.h  test.cpp
src/modules/camera_view/: CMakeLists.txt  camera_view_module.cpp  camera_view_module.h  export.cpp  export.h  test.cpp
src/modules/main/: CMakeLists.txt  export.cpp  export.h  main_module.cpp  main_module.h  main_window.cpp  main_window.h  main_window.ui  menu_tree.cpp  menu_tree.h  test.cpp  view.h
src/modules/settings/: CMakeLists.txt  export.cpp  export.h  iconfigurable.h  iconfigurator.h  settings_module.cpp  settings_module.h  settings_window.cpp  settings_window.h  settings_window.ui
